<resources>
    <string name="app_name">إعرف قانونك</string>
    <string name="email">البريد الإلكتروني</string>
    <string name="password">كلمة المرور</string>
    <string name="user_is_not_registered">عفواً ..هذا المستخدم غير مسجل</string>
    <string name="login">دخول</string>
    <string name="signup">التسجيل</string>
    <string name="invalid_email">Invalid email</string>
    <string name="invalid_password">كلمة المرور لا تقل عن 6 حروف</string>
    <string name="err_msg_problem_in_psswrd_or_email">هناك خطأ ما في البريد الإلكتروني او كلمة المرور برجاء المحاولة لاحقا</string>
    <string name="err_msg_not_registered">اهذة البيانات غير مسجلة برجاء التسجيل اولاً</string>
    <string name="err_msg_weak_psswrd">كلمة السر ضعيفة، برجاء تغيريها</string>
    <string name="sign_out_msg">الى اللقاء ننتظرك مرة اخرى</string>
    <string name="msg_login_success">دخول ناجح</string>
    <string name="err_msg_email">هناك خطأ  في  البريد الإلكتروني</string>
    <string name="err_msg_user_data_is_registered">"هذا البريد الإلكتروني مسجل سابقا "</string>
    <string name="main_questions_categories_title">تصنيفات الأسئلة الرئيسية</string>
    <string name="registeration_title">تسجيل البيانات</string>
    <string name="invalid_username">البريد الإلكتروني  به خطأ</string>
    <string name="sign_out">Sign out</string>
    <string name="network_error">تأكد من اتصالك بالإنترنت</string>
    <string name="branched_categories_title">التصنيفات  الفرعية</string>
    <string name="submit_answer">سجل الإجابة</string>
    <string name="progress_text_format">%1d : %2d</string>
    <string name="next_Question">السؤال التالي</string>
</resources>